@@ -61,11 +61,12 @@ typedef enum cpioMapFlags_e {
     CPIO_MAP_MODE	= (1 << 1),
     CPIO_MAP_UID	= (1 << 2),
     CPIO_MAP_GID	= (1 << 3),
-    CPIO_FOLLOW_SYMLINKS= (1 << 4), /* only for building. */
+    CPIO_FOLLOW_SYMLINKS= (1 << 4), /*!< only for building. */
     CPIO_MAP_ABSOLUTE	= (1 << 5),
     CPIO_MAP_ADDDOT	= (1 << 6),
     CPIO_ALL_HARDLINKS	= (1 << 7), /*!< fail if hardlinks are missing. */
-    CPIO_MULTILIB	= (1 << 31) /* internal, only for building. */
+    CPIO_MAP_TYPE	= (1 << 8), /*!< only for building. */
+    CPIO_MULTILIB	= (1 << 31) /*!< internal, only for building. */
 } cpioMapFlags;
 
 #define CPIO_NEWC_MAGIC	"070701"
